@@ -22,16 +22,10 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonUnwrapped;
 import com.fasterxml.jackson.annotation.JsonView;
-import tools.jackson.core.JacksonException;
-import tools.jackson.databind.JsonNode;
-import tools.jackson.databind.PropertyNamingStrategies;
-import tools.jackson.databind.PropertyNamingStrategy;
-import tools.jackson.databind.annotation.JsonNaming;
 import io.micronaut.context.exceptions.ConfigurationException;
 import io.micronaut.core.annotation.AnnotationClassValue;
 import io.micronaut.core.annotation.AnnotationValue;
 import io.micronaut.core.annotation.Internal;
-import org.jspecify.annotations.Nullable;
 import io.micronaut.core.beans.BeanMap;
 import io.micronaut.core.bind.annotation.Bindable;
 import io.micronaut.core.naming.NameUtils;
@@ -86,6 +80,12 @@ import io.swagger.v3.oas.models.media.MapSchema;
 import io.swagger.v3.oas.models.media.Schema;
 import io.swagger.v3.oas.models.media.StringSchema;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
+import org.jspecify.annotations.Nullable;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.PropertyNamingStrategies;
+import tools.jackson.databind.PropertyNamingStrategy;
+import tools.jackson.databind.annotation.JsonNaming;
 
 import javax.xml.datatype.XMLGregorianCalendar;
 import java.math.BigDecimal;
@@ -422,6 +422,7 @@ public final class SchemaDefinitionUtils {
             if (primitiveType == null) {
                 String defaultName = null;
                 if (arraySchemaAnn != null) {
+                    @SuppressWarnings("unchecked")
                     var schemaAnnForArray = (AnnotationValue<io.swagger.v3.oas.annotations.media.Schema>) arraySchemaAnn.get(PROP_ARRAY_SCHEMA, AnnotationValue.class).orElse(null);
                     if (schemaAnnForArray != null && schemaAnnForArray.contains(PROP_NAME)) {
                         defaultName = schemaAnnForArray.stringValue(PROP_NAME).orElse(null);
@@ -732,8 +733,8 @@ public final class SchemaDefinitionUtils {
      * @param type The type element
      * @param context The context
      * @param mediaTypes An optional media type
-     * @param fieldJavadoc Field-level java doc
-     * @param classJavadoc Class-level java doc
+     * @param fieldJavadoc Field-level Javadoc
+     * @param classJavadoc Class-level Javadoc
      * @param jsonViewClass Class from JsonView annotation
      * @param schemaAnnValue schema annotation value
      * @return The schema or null if it cannot be resolved
@@ -851,12 +852,12 @@ public final class SchemaDefinitionUtils {
 
         ClassElement componentType = type != null ? type.getFirstTypeArgument().orElse(null) : null;
         if (type instanceof WildcardElement wildcardEl) {
-            type = CollectionUtils.isNotEmpty(wildcardEl.getUpperBounds()) ? wildcardEl.getUpperBounds().get(0) : null;
+            type = CollectionUtils.isNotEmpty(wildcardEl.getUpperBounds()) ? wildcardEl.getUpperBounds().getFirst() : null;
         } else if (type instanceof GenericPlaceholderElement placeholderEl) {
             isArray = type.isArray();
             isIterable = type.isIterable();
             if (!isArray) {
-                type = placeholderEl.getResolved().orElse(CollectionUtils.isNotEmpty(placeholderEl.getBounds()) ? placeholderEl.getBounds().get(0) : null);
+                type = placeholderEl.getResolved().orElse(CollectionUtils.isNotEmpty(placeholderEl.getBounds()) ? placeholderEl.getBounds().getFirst() : null);
             }
         } else if (type instanceof GenericElement genericEl) {
             isArray = type.isArray();
@@ -975,10 +976,10 @@ public final class SchemaDefinitionUtils {
                             // this fix for enum and KotlinTypeArgumentElement
                             ClassElement realClassEl = componentType;
                             if (realClassEl instanceof WildcardElement wildcardEl) {
-                                realClassEl = CollectionUtils.isNotEmpty(wildcardEl.getUpperBounds()) ? wildcardEl.getUpperBounds().get(0) : null;
+                                realClassEl = CollectionUtils.isNotEmpty(wildcardEl.getUpperBounds()) ? wildcardEl.getUpperBounds().getFirst() : null;
                             } else if (realClassEl instanceof GenericPlaceholderElement placeholderEl) {
                                 if (!realClassEl.isArray()) {
-                                    realClassEl = placeholderEl.getResolved().orElse(CollectionUtils.isNotEmpty(placeholderEl.getBounds()) ? placeholderEl.getBounds().get(0) : null);
+                                    realClassEl = placeholderEl.getResolved().orElse(CollectionUtils.isNotEmpty(placeholderEl.getBounds()) ? placeholderEl.getBounds().getFirst() : null);
                                 }
                             } else if (realClassEl instanceof GenericElement genericEl) {
                                 realClassEl = genericEl.getResolved().orElse(null);
@@ -1243,7 +1244,7 @@ public final class SchemaDefinitionUtils {
             return composedSchema;
         }
         if (CollectionUtils.isNotEmpty(composedSchema.getAllOf()) && composedSchema.getAllOf().size() == 1) {
-            return composedSchema.getAllOf().get(0);
+            return composedSchema.getAllOf().getFirst();
         }
 
         return originalSchema;
@@ -1933,7 +1934,7 @@ public final class SchemaDefinitionUtils {
         }
         if (!type.isRecord() && !superTypes.isEmpty()) {
             // skip if it is Enum or Object super class
-            String firstSuperTypeName = superTypes.get(0).getName();
+            String firstSuperTypeName = superTypes.getFirst().getName();
             if (superTypes.size() == 1
                 && (firstSuperTypeName.equals(Enum.class.getName())
                 || firstSuperTypeName.equals(Object.class.getName())
@@ -2066,7 +2067,7 @@ public final class SchemaDefinitionUtils {
         // First, find getter method javadoc
         String doc = element.getDocumentation().orElse(null);
         if (StringUtils.isEmpty(doc)) {
-            // next, find field javadoc
+            // next, find field Javadoc
             if (element instanceof MemberElement memberEl) {
                 List<FieldElement> fields = memberEl.getDeclaringType().getFields();
                 if (CollectionUtils.isNotEmpty(fields)) {
@@ -2112,14 +2113,17 @@ public final class SchemaDefinitionUtils {
         }
 
         if (annValues.containsKey(PROP_ARRAY_SCHEMA)) {
+            //noinspection unchecked
             processSchemaAnn(schemaToBind, context, element, true, classEl, (AnnotationValue<io.swagger.v3.oas.annotations.media.Schema>) annValues.get(PROP_ARRAY_SCHEMA));
         }
 
         AnnotationValue<io.swagger.v3.oas.annotations.media.Schema> itemsSchemaAnn = null;
         if (annValues.containsKey(PROP_ITEMS)) {
+            //noinspection unchecked
             itemsSchemaAnn = (AnnotationValue<io.swagger.v3.oas.annotations.media.Schema>) annValues.get(PROP_ITEMS);
         }
         if (annValues.containsKey(PROP_SCHEMA)) {
+            //noinspection unchecked
             itemsSchemaAnn = (AnnotationValue<io.swagger.v3.oas.annotations.media.Schema>) annValues.get(PROP_SCHEMA);
         }
         if (itemsSchemaAnn != null) {
@@ -2146,6 +2150,7 @@ public final class SchemaDefinitionUtils {
             if (annValues.containsKey(PROP_CONTAINS)) {
 
                 var containsSchema = schemaToBind.getUnevaluatedItems() != null ? schemaToBind.getUnevaluatedItems() : createSchema();
+                //noinspection unchecked
                 processSchemaAnn(containsSchema, context, element, true, classEl, (AnnotationValue<io.swagger.v3.oas.annotations.media.Schema>) annValues.get(PROP_CONTAINS));
                 schemaToBind.setContains(containsSchema);
 
@@ -2158,6 +2163,7 @@ public final class SchemaDefinitionUtils {
             }
             if (annValues.containsKey(PROP_UNEVALUATED_ITEMS)) {
                 var unevaluatedSchema = schemaToBind.getUnevaluatedItems() != null ? schemaToBind.getUnevaluatedItems() : createSchema();
+                //noinspection unchecked
                 processSchemaAnn(unevaluatedSchema, context, element, true, classEl, (AnnotationValue<io.swagger.v3.oas.annotations.media.Schema>) annValues.get(PROP_UNEVALUATED_ITEMS));
                 schemaToBind.setUnevaluatedItems(unevaluatedSchema);
             }
@@ -2264,6 +2270,7 @@ public final class SchemaDefinitionUtils {
                 }
             }
         }
+        @SuppressWarnings("unchecked")
         var schemaExtDocs = (AnnotationValue<io.swagger.v3.oas.annotations.ExternalDocumentation>) annValues.get(PROP_EXTERNAL_DOCS);
         ExternalDocumentation externalDocs = null;
         if (schemaExtDocs != null) {
@@ -2949,7 +2956,7 @@ public final class SchemaDefinitionUtils {
                     }
                 }
 
-                // checking if the getter is overridden and has javadoc and other annotations
+                // checking if the getter is overridden and has Javadoc and other annotations
                 if (publicField instanceof PropertyElement propertyEl) {
                     var readerMethod = propertyEl.getReadMethod().orElse(null);
                     if (readerMethod != null) {
@@ -3372,10 +3379,10 @@ public final class SchemaDefinitionUtils {
                         .collect(Collectors.toSet());
                     if (types.size() > 1) {
                         warn("Duplicate property definition for property " + entry.getKey()
-                            + " with different types " + types + ". Falling back to first entry " + entry.getValue().get(0), context);
+                            + " with different types " + types + ". Falling back to first entry " + entry.getValue().getFirst(), context);
                     }
                 }
-                propertiesOfAll.put(entry.getKey(), entry.getValue().get(0));
+                propertiesOfAll.put(entry.getKey(), entry.getValue().getFirst());
             }
             if (properties != null) {
                 propertiesOfAll.putAll(properties);
